Time: 32 ms (27.52%), Space: 76.8 MB (17.95%) - LeetHub